--- a/src/case_study4/src/main/resources/templates/contract/list.html
+++ b/src/case_study4/src/main/resources/templates/contract/list.html
@@ -1,10 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+    <style>
+        body {
+            background: url("https://bit.ly/3iE7las");
+            background-size: cover;
+        }
+
+        header {
+            width: 100%;
+        }
+
+        header .left-header img {
+            width: 40px;
+            height: 80px;
+            margin: 5px 5px 5px 40px;
+            float: left;
+        }
+
+        header .right-header h3 {
+            float: right;
+        }
+
+        header .left-header {
+            float: left;
+            width: 20%;
+        }
+
+        header .right-header {
+            float: right;
+            width: 20%;
+        }
+
+        header .mid-header {
+            text-align: center;
+            float: left;
+            width: 60%;
+        }
+
+        .navbar ul li a {
+            font-weight: bold;
+            color: #4b4b2e !important;
+        }
+
+        .navbar ul li a:hover {
+            text-decoration: underline;
+        }
+
+        .menu {
+            clear: left;
+            float: left;
+            width: 100%;
+        }
+
+        .body-mid .body-mid-left {
+            clear: left;
+            float: left;
+            width: 20%;
+            min-height: 100%;
+        }
+
+        .body-mid .body-mid-right {
+            float: left;
+            width: 100%;
+        }
+
+        .body-mid .body-mid-right img {
+            width: 100%;
+        }
+
+        footer {
+            clear: left;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
+<h2 style="text-align: center">Contract List</h2>
 
+<div class="menu">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(212,212,212,0.26)">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/employees">Employees</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/customers">Customer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/facility">Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/booking">Booking</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/contract">Contract</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/contract/create">Add New Contract</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/contract/use-facility">Customer Using
+                            Facility</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+
+<table class="table table-white" style="text-align: center" border="1">
+    <thead>
+    <tr>
+        <th>STT</th>
+        <th>Facility Name</th>
+        <th>Customer Name</th>
+        <th>Start Day</th>
+        <th>End Day</th>
+        <th>Deposit</th>
+        <th>Total Money</th>
+        <th colspan="2">Accompanied service</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr th:each="contract , status: ${contractList}">
+        <td th:text="${status.count}"></td>
+        <td th:text="${contract.facilityId.name}"></td>
+        <td th:text="${contract.customerId.name}"></td>
+        <td th:text="${contract.dateStart}"></td>
+        <td th:text="${contract.dateEnd}"></td>
+        <td th:text="${contract.deposit}"></td>
+        <td th:text="${contract.totalPrice}"></td>
+        <td>
+            <button type="button" class="btn btn-primary">
+                +
+            </button>
+        </td>
+        <td>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" >
+                Accompanied service list
+            </button>
+        </td>
+
+
+    </tr>
+    </tbody>
+</table>
+
+<div>
+
+</div>
+<script>
+
+</script>
 </body>
 </html>
